--- a/basic/Foods/first.html
+++ b/basic/Foods/first.html
@@ -108,7 +108,6 @@
         </div>
         <hr class="visible-xs">
       </div>
-      <!-- Add after every 2nd menu-item-tile -->
       <div class="clearfix visible-lg-block visible-md-block"></div>
 
       <div class="menu-item-tile col-md-6">
@@ -122,53 +121,45 @@
           </div>
           <div class="menu-item-description col-sm-7">
             <h3 class="menu-item-title">KARNIYARIK</h3>
-            <p class="menu-item-details">В турецком общепите часто подают такое блюдо--это фаршированные баклажаны,в переводе означает "раненый живот".Ничего сложного в приготовлении нет,как и во всей турецкой кухне.
-Баклажан очистить полосками с помощью овощечистки,присолить и оставить на 10 минут.Затем смазать их растительным маслом и положить на нагретую толстостенную сковороду под крышку.Томить на медленном огне до мягкости баклажанов,периодически переворачивая.
-как только баклажаны стали мягкими,надрезать каждый вдоль,но не до конца.раскрыть,присолить середину,сбрызнуть оливковым маслом и положить начинку.
+            <p class="menu-item-details">Это фаршированные баклажаны,в переводе означает "раненый живот".
+Баклажан очистить полосками с помощью овощечистки, присолить и оставить на 10 минут. Затем смазать их растительным маслом и положить на нагретую толстостенную сковороду под крышку.Томить на медленном огне до мягкости баклажанов,периодически переворачивая.
+как только баклажаны стали мягкими, надрезать каждый вдоль,но не до конца.раскрыть,присолить середину,сбрызнуть оливковым маслом и положить начинку.
 Полить соусом,он не должен скрывать начинку,только баклажан.
 Накрыть форму для запекания фольгой и отправить в духовку при 200 гр на 20 минут.Затем снять фольгу и поставить ещё на 10 минут.
 Начинка:
 Фарш,мелко порезанный лук,специи,петрушка,натёртый на тёрке помидор.Обжарить фарш с луком,Добавить соль,перец и другие приправы по вкусу.обычно добавляют молотую зиру.Если фарш нежирный,то добавить в него немного оливкового масла.
 Соус:
 Обжарить на растит. масле ложку томатной пасты.добавить 1/2 ч.л. молотой сладкой паприки,соль,сахар,чёрный перец.Добавить воды до нужного количества (примерно 0,5л),вскипятить.Можно в качестве соуса использовать очищенные от кожи томаты (измельчить,выпарить)
-Традиционно подают карныярык с рисом.
-Приятного аппетита!</p>
+Традиционно подают карныярык с рисом.</p>
           </div>
         </div>
         <hr class="visible-xs">
       </div>
-
     </section>
+  </div>
 
-  </div><!-- End of #main-content -->
-
- <footer class="panel-footer">
+  <footer class="panel-footer">
     <div class="container">
       <div class="row">
         <section id="hours" class="col-sm-4">
-          <span>Hours:</span><br>
-          Sun-Thurs: 11:15am - 10:00pm<br>
-          Fri: 11:15am - 2:30pm<br>
-          Saturday Closed
+          <span>Restaurants</span><br>
+          restaurant 1<br>
+          restaurant 2<br>
           <hr class="visible-xs">
         </section>
-        <section id="address" class="col-sm-4">
+        <section id="Shop" class="col-sm-4">
           <span>Address:</span><br>
-          7105 Reisterstown Road<br>
-          Baltimore, MD 21215
-          <p>* Delivery area within 3-4 miles, with minimum order of $20 plus $3 charge for all deliveries.</p>
+          city, street<br>
+          city street, number<br>
           <hr class="visible-xs">
         </section>
         <section id="testimonials" class="col-sm-4">
-          <p>"The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
-          <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
+          <p>"Afiyet olsun"</p>
+          <p>"«приятного аппетита»"</p>
         </section>
       </div>
-      <div class="text-center">&copy; Copyright David Chu's China Bistro 2016</div>
     </div>
   </footer>
-
-  <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
