--- a/basic/Foods/second.html
+++ b/basic/Foods/second.html
@@ -47,11 +47,9 @@
       T.88-55-888-5
     </a>
   </div>
-
  <div id="main-content" class="container">
     <h2 id="menu-categories-title" class="text-center">Desserts</h2>
     <div class="text-center">Turk mutfagi</div>
-
     <section class="row">
       <div class="menu-item-tile col-md-6">
         <div class="row">
@@ -72,7 +70,6 @@
         </div>
         <hr class="visible-xs">
       </div>
-
       <div class="menu-item-tile col-md-6">
         <div class="row">
           <div class="col-sm-5">
@@ -92,42 +89,32 @@
         </div>
         <hr class="visible-xs">
       </div>
-      <!-- Add after every 2nd menu-item-tile -->
       <div class="clearfix visible-lg-block visible-md-block"></div>
-      <!-- Add after every 2nd menu-item-tile -->
       <div class="clearfix visible-lg-block visible-md-block"></div>
-
     </section>
-
-  </div><!-- End of #main-content -->
-
-  <footer class="panel-footer">
+  </div>
+   <footer class="panel-footer">
     <div class="container">
       <div class="row">
         <section id="hours" class="col-sm-4">
-          <span>Hours:</span><br>
-          Sun-Thurs: 11:15am - 10:00pm<br>
-          Fri: 11:15am - 2:30pm<br>
-          Saturday Closed
+          <span>Restaurants</span><br>
+          restaurant 1<br>
+          restaurant 2<br>
           <hr class="visible-xs">
         </section>
-        <section id="address" class="col-sm-4">
+        <section id="Shop" class="col-sm-4">
           <span>Address:</span><br>
-          7105 Reisterstown Road<br>
-          Baltimore, MD 21215
-          <p>* Delivery area within 3-4 miles, with minimum order of $20 plus $3 charge for all deliveries.</p>
+          city, street<br>
+          city street, number<br>
           <hr class="visible-xs">
         </section>
         <section id="testimonials" class="col-sm-4">
-          <p>"The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
-          <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
+          <p>"Afiyet olsun"</p>
+          <p>"«приятного аппетита»"</p>
         </section>
       </div>
-      <div class="text-center">&copy; Copyright David Chu's China Bistro 2016</div>
     </div>
   </footer>
-
-  <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
