--- a/basic/Foods/first.html
+++ b/basic/Foods/first.html
@@ -67,23 +67,13 @@
             <p class="menu-item-details">Ингредиенты:
 
 Для котлет; 
-• 1/2 килограмма говяжьего и бараньего фарша
-• 1 головка лука 
-• 1 яйцо 
-• 1 стакан панировочных сухарей (или хлебного черствого мякиша)
-• Соль 
-• Перец 
-• Тмин 
-
+• 1/2 килограмма говяжьего и бараньего фарша • 1 головка лука • 1 яйцо • 1 стакан панировочных сухарей (или хлебного черствого мякиша)
+• Соль • Перец • Тмин 
 Для заправки; 
-• 4-5 штук зеленого перца 
-• 2 помидора 
-
-Приготовление: 
-1. Тщательно перемешать фарш в мясорубке, добавив все ингредиенты. 
-2. Сформировать небольшие котлеты и обжарить их в горячем масле. 
-3. Уложить котлеты в неглубокую сковороду и сверху покрыть их нарезанными кусками помидоров, положить перец. 
-4. Тушить на среднем огне в течение 10-15 минут и подавать на стол.
+• 4-5 штук зеленого перца • 2 помидора 
+Тщательно перемешать фарш в мясорубке, добавив все ингредиенты. Сформировать небольшие котлеты и обжарить их в горячем масле. 
+Уложить котлеты в неглубокую сковороду и сверху покрыть их нарезанными кусками помидоров, положить перец. 
+Тушить на среднем огне в течение 10-15 минут.
 </p>
           </div>
         </div>
@@ -100,9 +90,11 @@
           </div>
           <div class="menu-item-description col-sm-7">
             <h3 class="menu-item-title">  HARPUT KÖFTESİ</h3>
-            <p class="menu-item-details">Сложное по составу блюдо турецкой кухни просто в приготовлении,питательно и с большой палитрой вкуса,своего рода тефтели с нутом и бамией.
-Бамию почистить,промыть и залить холодной водой (1 литр) со столовой ложкой яблочного уксуса.Оставить пока будем готовить собственно блюдо.
-В фарш (200 гр) добавить 4 ст.л. мелкого булгура (köftelik bulgur),потереть на тёрке большую луковицу,соль,перец,ложку масла,маленькую щепотку перца чили,хорошо вымесить и оставить на 20 минут для набухания булгура.Масса значительно загустеет,добавить мелко порезанную петрушку и по чайной ложке холодной воды (если надо),чтобы получилось "тесто" как на котлеты.Скатать шарики величиной с грецкий орех.
+            <p class="menu-item-details"> Бамию почистить,промыть и залить холодной водой (1 литр) со столовой ложкой яблочного уксуса.
+            Оставить пока будем готовить собственно блюдо. В фарш (200 гр) добавить 4 ст.л. мелкого булгура (köftelik bulgur),
+            потереть на тёрке большую луковицу,соль,перец,ложку масла,маленькую щепотку перца чили,хорошо вымесить и оставить 
+            на 20 минут для набухания булгура.Масса значительно загустеет,добавить мелко порезанную петрушку и по чайной ложке 
+            холодной воды (если надо),чтобы получилось "тесто" как на котлеты.Скатать шарики величиной с грецкий орех.
 На сковороде обжарить мелко порезанный лук,следом мелко порезанное мясо (150 гр,можно куриное филе),затем добавить ложку томатной пасты и тоже обжарить.Налить немного горячей воды и соль по вкусу.В кипящий соус положить шарики из фарша,полстакана консервированного нута и бамию (очень хорошо промыть от слизи под проточной водой).Соус должен едва скрывать тефтели и бамию,лежащие в один слой.Накрыть крышкой и оставить при медленном кипении примерно на 15--20 минут (не размешивать! Подают обычно с рисом.А мне и с гречкой понравилось))</p>
           </div>
         </div>
